syntax = "proto3";

package odin;

message ProcessRequest {
    string request_id = 1;
    string user_id = 2;
    string device_id = 3;
    string input = 4;
    string input_type = 5; // "text", "audio", "image", "video"
}

message ProcessResponse {
    string response = 1;
    repeated string actions_taken = 2;
}

service OdinService {
    rpc Process(ProcessRequest) returns (ProcessResponse);
}
